# PBS-soft-body

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bunny.off
assets/: rubber_duck.mtl
src/: main.cpp  scenes.h  utils.h
src/controller/: GuiController.cpp  GuiController.h  SimulationController.cpp  SimulationController.h
src/model/: Constraint.h  ConstraintFactory.h  Mesh.cpp  Mesh.h  SimulationModel.cpp  SimulationModel.h
src/model/accel/: AABB.h  BVH.cpp  BVH.h  aabb.h  bvh.cpp  bvh.h
src/model/constraints/: Distance.cpp  Distance.h  PlaneFriction.cpp  StaticPlane.cpp  StaticPlane.h  StaticPlaneCollision.cpp  Volume.cpp
src/view/: RendereableMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/view/shaders/: floor.fs  floor.vs  mesh.fs  mesh.vs
